vacancycentral.co.uk (archived on 2009-06-08)
{
  "alexa_rank": 503933,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4197,
  "classifier_probability": 0.8,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.87,
  "homepage_snapshot_redirected_domain": "vacancycentral.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090316031033id_/http://www.vacancycentral.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090316031033id_/http%3A//vacancycentral.co.uk",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "vacancycentral.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090608150731id_/http%3A//www.vacancycentral.co.uk/privacy.php",
  "policy_title": "UK Job Vacancies at Vacancy Central",
  "policy_url": "vacancycentral.co.uk/privacy.php",
  "sha1": "76e8812add44cdf61387488bb7d0a3597326633b",
  "simhash": 12543679034944203980,
  "simhash_updated": false,
  "site_hostname": "vacancycentral.co.uk",
  "site_url": "http://vacancycentral.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090608150731",
  "word_count": 685,
  "year": 2009
}

--- a/v/va/vac/vacancycentral.co.uk.html
+++ b/v/va/vac/vacancycentral.co.uk.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the vacancycentral.co.uk privacy policy that was archived on 2008-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081221193639id_/http%3A//www.vacancycentral.co.uk/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the vacancycentral.co.uk privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608150731id_/http%3A//www.vacancycentral.co.uk/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta name="description" content="Vacancy Central is the Overlay job board of more than 60 industry specific job boards focusing on driving ,logistics ,finance ,banking ,admin ,aviation ,biotec ,construction ,catering ,electronics ,arts ,automotive ,charity ,childcare ,consulting ,creative ,defence ,education ,engineering ,environmental ,executive ,management ,fm ,food and drink ,public sector ,graduate ,healthcare ,housing ,hr ,industrial ,it ,insurance ,legal ,manufacturing ,marketing ,media ,multilingual ,pharma ,pr ,printing ,publishing ,property ,purchasing ,rail ,rec2rec ,retail ,sales ,science ,security ,shipping ,socialcare ,sport ,tax ,telecoms ,tourism ,leisure ,bilingual ,fashion ,part time jobs and vacancies">
 <meta name="keywords" content="Jobs,Careers,Employment,driving,logistics,finance,banking,admin,aviation,biotec,construction,catering,electronics,arts,automotive,charity,childcare,consulting,creati ve,defence,education,engineering,enironmental,executive,management,fm,foodanddrink,publicsector,graduate,healthcare,housing,hr,industrial,it,insurance,legal,manufacturing,marketing,media,multilingual,pharma,pr,printing,publishing,property,purchasing,rail,rec2rec,retail,sales,science,security,shipping,socialcare,sport,tax,telecoms,tourism,leisure,bilingual,fashion,part time job,finance,admin,arts,automotive,aviation,banking,biotec,catering,charity,childcare,construction,consulting,creative,callcentre,defence,driving,education ,electronics,engineering,environmental,executive,fm,fashion,financialservices,foodanddrink,publicsector,graduate,healthcare,healthandsafety,housebuilding,hrjobvacancies,industrialjobvacancies,itjobvacancies,insurancejobvacancies,legaljobvacancies,supplychainjobvacancies,manufacturingjobvacancies,marketingjobvacancies,marketresearchjobvacancies,mediajobvacancies,multilingualjobvacancies,notforprofitjobvacancies,pharmajobvacancies,prjobvacancies,printingjobvacancies,propertyjobvacancies,purchasingjobvacancies,,,,rail,rec2rec,retail,sales,science,security,shipping,socialcare,leisure,logistics,tax,telecoms,tourism,training,personnel">
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <title>UK Job Vacancies at Vacancy Central</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 <script language="JavaScript">
 <!--
 function MM_findObj(n, d) { //v4.01
@@ -67,13 +67,14 @@ function MM_preloadImages() { //v3.0
 </tr>
 <tr>
 <td colspan="2">
-<span style="float:right;border:0px;padding-bottom:-1px;margin-bottom:-1px;"><a href="wscrm/recruiters.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_employ','images/vc_rollover_employ_r1_c1_f2.gif','images/vc_rollover_employ_r1_c1_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_employ','images/vc_rollover_employ_r1_c1_f3.gif',1);"><img name="vc_rollover_employ" src="images/vc_rollover_employ_r1_c1_f2.gif" border="0" vspace="1" alt=""></a></span>
+<span style="float:right;border:0px;padding-bottom:-1px;margin-bottom:-1px;"><a href="/wscrm/recruiters.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_employ','/images/vc_rollover_employ_r1_c1_f2.gif','/images/vc_rollover_employ_r1_c1_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_employ','/images/vc_rollover_employ_r1_c1_f3.gif',1);"><img name="vc_rollover_employ" src="/images/vc_rollover_employ_r1_c1_f2.gif" border="0" vspace="1" alt=""></a></span>
 <table border="0" cellpadding="0" cellspacing="0" width="412" style="padding-top:1px;margin-bottom:-1px;">
   <tbody><tr>
-  	<td><a href="index.php"><img src="images/tabs/vc_rollover_nav_r1_c1_f3.gif" border="0" alt="Home"></a></td><td><a href="my_profile.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c2','images/tabs/vc_rollover_nav_r1_c3_f2.gif','images/tabs/vc_rollover_nav_r1_c3_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c2','images/tabs/vc_rollover_nav_r1_c3_f2.gif',1);"><img name="vc_rollover_nav_r1_c2" src="images/tabs/vc_rollover_nav_r1_c3.gif" border="0" alt="My Profile" style="margin: 0px 2px 0px 2px;"></a></td>
-<td><a href="search.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c4','images/tabs/vc_rollover_nav_r1_c4_f2.gif','images/tabs/vc_rollover_nav_r1_c4_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c4','images/tabs/vc_rollover_nav_r1_c4_f2.gif',1);"><img name="vc_rollover_nav_r1_c4" src="images/tabs/vc_rollover_nav_r1_c4.gif" border="0" alt="Vacancy Search" style="margin: 0px 2px 0px 2px;"></a></td>
-<td><a href="careers_advice.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c6','images/tabs/vc_rollover_nav_r1_c6_f2.gif','images/tabs/vc_rollover_nav_r1_c6_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c6','images/tabs/vc_rollover_nav_r1_c6_f2.gif',1);"><img name="vc_rollover_nav_r1_c6" src="images/tabs/vc_rollover_nav_r1_c6.gif" border="0" alt="Careers Advice" style="margin: 0px 2px 0px 2px;"></a></td>
-<td><a href="help.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c7','images/tabs/vc_rollover_nav_r1_c7_f2.gif','images/tabs/vc_rollover_nav_r1_c7_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c7','images/tabs/vc_rollover_nav_r1_c7_f2.gif',1);"><img name="vc_rollover_nav_r1_c7" src="images/tabs/vc_rollover_nav_r1_c7.gif" border="0" alt="Help" style="margin: 0px 2px 0px 2px;"></a></td>
+  	<td><a href="/index.php"><img src="/images/tabs/vc_rollover_nav_r1_c1_f3.gif" border="0" alt="Home"></a></td><td><a href="/my_profile.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c2','/images/tabs/vc_rollover_nav_r1_c3_f2.gif','/images/tabs/vc_rollover_nav_r1_c3_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c2','/images/tabs/vc_rollover_nav_r1_c3_f2.gif',1);"><img name="vc_rollover_nav_r1_c2" src="/images/tabs/vc_rollover_nav_r1_c3.gif" border="0" alt="My Profile" style="margin: 0px 2px 0px 2px;"></a></td>
+<td><a href="/jobsearch.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c4','/images/tabs/vc_rollover_nav_r1_c4_f2.gif','/images/tabs/vc_rollover_nav_r1_c4_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c4','/images/tabs/vc_rollover_nav_r1_c4_f2.gif',1);"><img name="vc_rollover_nav_r1_c4" src="/images/tabs/vc_rollover_nav_r1_c4.gif" border="0" alt="Vacancy Search" style="margin: 0px 2px 0px 2px;"></a></td>
+<td><a href="/careers_advice.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c6','/images/tabs/vc_rollover_nav_r1_c6_f2.gif','/images/tabs/vc_rollover_nav_r1_c6_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c6','/images/tabs/vc_rollover_nav_r1_c6_f2.gif',1);"><img name="vc_rollover_nav_r1_c6" src="/images/tabs/vc_rollover_nav_r1_c6.gif" border="0" alt="Careers Advice" style="margin: 0px 2px 0px 2px;"></a></td>
+<td><a href="/help.php" onmouseout="MM_nbGroup('out');" onmouseover="MM_nbGroup('over','vc_rollover_nav_r1_c7','/images/tabs/vc_rollover_nav_r1_c7_f2.gif','/images/tabs/vc_rollover_nav_r1_c7_f3.gif',1);" onclick="MM_nbGroup('down','navbar1','vc_rollover_nav_r1_c7','/images/tabs/vc_rollover_nav_r1_c7_f2.gif',1);"><img name="vc_rollover_nav_r1_c7" src="/images/tabs/vc_rollover_nav_r1_c7.gif" border="0" alt="Help" style="margin: 0px 2px 0px 2px;"></a></td>
+
   </tr>
 </tbody></table>
 </td>
@@ -136,33 +137,38 @@ body { font-family:Arial, Helvetica, sans-serif; font-size:11px }
 <td colspan="2">You are Not Logged In</td>
 </tr>
 <!-- Register --><tr>
-<td><a href="newreg.php"><img src="images/icons/loginreg48.gif" alt="register" title="register" border="0"></a></td>
-<td><a href="newreg.php" style="color:#FFFFFF;">Register Now</a></td>
+<td><a href="/newreg.php"><img src="/images/icons/loginreg48.gif" alt="register" title="register" border="0"></a></td>
+<td><a href="/newreg.php" style="color:#FFFFFF;">Register Now</a></td>
 </tr><!-- /Register -->
 </tbody></table><br><p></p>
 <form name="loginform" id="loginform" action="login.php" method="post">
-<table border="0" cellpadding="0" cellspacing="0">
-<tbody><tr><td>
 <input type="hidden" name="login" value="true">
+<input type="hidden" name="redirect" value="%2Fprivacy.php">
 
-Username: <span style="font-size:80%;">(email address)</span><br>
-<input type="text" name="user" id="userfield" value=""><br>
-Password:<br>
-<input type="password" name="pass" onkeydown="if(event.keyCode==13){document.getElementById('loginform').submit();}"><br>
-<input type="radio" name="hs" value="h" border="0" style="border:none;" checked="checked"> Home PC <br><input type="radio" style="border:none;" border="0" name="hs" value="s">
-Work / Shared PC <a href="javascript:NewWindow('templates/cookies.html','help','400','400','yes','center');"><img align="absmiddle" src="images/help.gif" alt="All About Cookies" border="0"></a></td>
+<table border="0" cellpadding="0" cellspacing="0">
+<tbody><tr>
+	<td>
+		Username: <span style="font-size:80%;">(email address)</span><br>
+		<input type="text" name="user" id="userfield" value=""><br>
+		Password:<br>
+		<input type="password" name="pass" onkeydown="if(event.keyCode==13){document.getElementById('loginform').submit();}"><br>
+		<input type="radio" name="hs" value="h" border="0" style="border:none;" checked="checked"> Home PC <br><input type="radio" style="border:none;" border="0" name="hs" value="s">
+		Work / Shared PC <a href="javascript:NewWindow('/templates/cookies.html','help','400','400','yes','center');"><img align="absmiddle" src="/images/help.gif" alt="All About Cookies" border="0"></a>
+	</td>
 </tr>
 <tr>
-<td valign="middle" align="center" height="45"><a href="javascript:document.getElementById('loginform').submit();"><img src="images/loginVCDetails.gif" alt="sign in" border="0" align="right" style="border:none;" title="sign in"></a> </td>
+	<td valign="middle" align="center" height="45"><a href="javascript:document.getElementById('loginform').submit();"><img src="/images/loginVCDetails.gif" alt="sign in" border="0" align="right" style="border:none;" title="sign in"></a></td>
 </tr>
 <tr>
-  <td valign="top" align="left"><br>
-    <a href="/get_password.php" style="color:#FFFFFF;">Forgot Your Password?</a> <br>
-	<a href="/go_activate.php?do=autoresend" style="color:#FFFFFF;">Need To Re-Activate?</a><br>
-	<a href="/browsercheck.php" style="color:#FFFFFF;">Problems Logging In?</a></td>
+	<td valign="top" align="left"><br>
+		<a href="/get_password.php" style="color:#FFFFFF;">Forgot Your Password?</a><br>
+		<a href="/go_activate.php?do=autoresend" style="color:#FFFFFF;">Need To Re-Activate?</a><br>
+		<a href="/browsercheck.php" style="color:#FFFFFF;">Problems Logging In?</a>
+	</td>
 </tr>
 </tbody></table>
 </form>
+
 <script language="javascript" type="text/javascript">
 var win=null;
 function NewWindow(mypage,myname,w,h,scroll,pos,getvars){
@@ -183,23 +189,33 @@ if(getvars) {
 }
 }
 </script>
+
 	</div>
-<div style="bottom:0px;"><img src="images/login_bottom.gif"></div>
+<div style="bottom:0px;"><img src="/images/login_bottom.gif"></div>
 </div>
 <div id="tools">
-<div style="top:0px;"><img src="images/tools_right_top.gif"></div>
+<div style="top:0px;"><img src="/images/tools_right_top.gif"></div>
 <!-- <span><a href="jobbasket.php">Job Basket</a></span> -->
-<span><a href="careers_advice.php">Careers Advice</a></span>
-<div style="bottom:0px;"><img src="images/tools_right_bottom.gif"></div>
+<span><a href="/careers_advice.php">Careers Advice</a></span>
+<div style="bottom:0px;"><img src="/images/tools_right_bottom.gif"></div>
 </div>
 </td>
 </tr>
 <tr><td style="padding:10px;" colspan="2">&nbsp; </td></tr>
 <tr>
 <td colspan="2" style="border-top:1px solid #5c88b4;font-size:12px;" align="center">
-<span><!-- discpriv --> <a href="disclaimer.php">Disclaimer</a> | <a href="privacy.php">Privacy</a> |<!-- /discpriv --> <a href="/contact.php">Contact Us</a></span> </td>
+<span><!-- discpriv --> <a href="/disclaimer.php">Disclaimer</a> | <a href="/privacy.php">Privacy</a> |<!-- /discpriv --> <a href="/contact.php">Contact Us</a></span> </td>
 </tr>
 </tbody></table>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-296097-7");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 
 </body></html>
