--- a/d/dr/dru/drugabuse.gov.html
+++ b/d/dr/dru/drugabuse.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the drugabuse.gov privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216013229id_/http%3A//drugabuse.gov/tools/Privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the drugabuse.gov privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608154328id_/http%3A//www.drugabuse.gov/tools/Privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- #BeginTemplate "/Templates/in_the_news.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -61,6 +61,79 @@ font-weight: none;
 background-color: #e7e1d0;
 
 }
+
+
+
+
+
+/* DRUG PUBS BOX DIV */
+ 
+.drugpubs-box{
+border:solid 1px #000;
+width: 180px;
+background:#fff;
+color:#000;
+padding:10px;
+text-align:center;
+}
+
+
+/* PDF & ESPANOL BOX DIV */
+ 
+.pdfespanol-box{
+border:solid 1px #000;
+width: 180px;
+background:#fff;
+color:#000;
+padding:10px;
+text-align:center;
+}
+
+
+/* DRUG PUBS BUTTON */
+ 
+a.squarebutton{
+background: transparent url('/images/square-blue-left.gif') no-repeat top left;
+display: block;
+
+font: 13px Arial; /* Change 12px as desired */
+line-height: 15px; /* This value + 4px + 4px (top and bottom padding of SPAN) must equal height of button background (default is 23px) */
+height: 23px; /* Height of button background height */
+padding-left: 9px; /* Width of left menu image */
+text-decoration: none;
+}
+
+a:link.squarebutton, a:visited.squarebutton, a:active.squarebutton{
+color: black; /*button text color*/
+}
+
+a.squarebutton span{
+background: transparent url('/images/square-blue-right.gif') no-repeat top right;
+font-weight: bold;
+display: block;
+padding: 4px 9px 4px 0; /*Set 9px below to match value of 'padding-left' value above*/
+}
+
+a.squarebutton:hover{ /* Hover state CSS */
+background-position: bottom left;
+}
+
+a.squarebutton:hover span{ /* Hover state CSS */
+background-position: bottom right;
+color: black;
+font-weight: bold;
+}
+
+.buttonwrapper{ /* Container you can use to surround a CSS button to clear float */
+overflow: hidden; /*See: http://www.quirksmode.org/css/clearing.html */
+width: 100%;
+}
+
+
+
+
+
+
 
 
 
@@ -380,13 +453,96 @@ document.onclick=hidemenu
 
 
 
-</script></head><body><div id="dropmenudiv" style="visibility:hidden;width:235px;background-color:#edf2eb" onmouseover="clearhidemenu()" onmouseout="dynamichide(event)"></div>
+</script></head><body onload="preloadImages();" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" bgcolor="#E7E1D0"><div id="dropmenudiv" style="visibility:hidden;width:235px;background-color:#edf2eb" onmouseover="clearhidemenu()" onmouseout="dynamichide(event)"></div>
+
+
+
+
+
+
 
 <!-- #EndEditable -->
 
 
 
-<font size="1" face="Arial, Helvetica,Sans-Serif">[<a href="/headerback.html">Finished Printing? - Click Here to Return to Normal View</a>]</font><br><br>
+
+
+
+
+
+
+
+<center>
+
+<br>
+<!-- IN USE, DRAFT HOME PAGE -->
+
+<p style="font-size: 0px;margin:0px 0px;padding: 0px 0px;position: absolute;z-index: -2;"><a href="#skipnav" style="color:white;">Skip Navigation</a></p>
+<table width="788" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr>
+<td valign="middle" bgcolor="#c4b495" width="300"><a href="http://www.nih.gov/"><img src="/1homeimages/nih_header.gif" alt="Link to  the National Institutes of Health" width="300" height="18" border="0"></a></td>
+<td align="right" valign="middle" bgcolor="#c4b495"><font size="1" color="white">NIDA NEWS</font><font size="1"> </font></td>
+<td align="right" valign="middle" bgcolor="#c4b495" width="50"><a href="/nidanews.xml"><img src="/Images/rss.gif" alt="NIDA News RSS Feed" width="44" height="16" border="0"></a><img src="/Images/spacer.gif" alt="" height="1" width="2" border="0"></td>
+</tr>
+</tbody></table>
+<table width="788" border="0" cellspacing="0" cellpadding="0" bgcolor="#000066">
+<tbody><tr>
+<td>
+<table width="100%" border="0" cellspacing="1" cellpadding="0">
+<tbody><tr>
+<td>
+<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#223c75">
+<tbody><tr>
+<td align="left" valign="top"><a href="/index.html"><img src="/1homeimages/NIDA1.gif" alt="The Science of Drug Abuse and Addiction from the National Institute on Drug Abuse" width="341" height="70" border="0"></a></td>
+<td align="right" valign="top"><img src="/1homeimages/bannerhead6.gif" alt="Keep Your Body Healthy" width="270" height="70" border="0"></td>
+</tr>
+</tbody></table>
+</td>
+</tr>
+<tr>
+<td>
+<label for="searchbox" style="z-index:-1;position:relative;margin-right:-50px; font-size:0px;">Search the NIDA website</label><table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#000066">
+<tbody><tr>
+<td align="left" valign="bottom" height="22" nowrap="" width="578"><a onmouseover="changeImages( /*CMP*/'nav_home_off',/*URL*/'/1homeimages/nav_home_on2.gif');return true" onmouseout="changeImages( /*CMP*/'nav_home_off',/*URL*/'/1homeimages/nav_home_off2.gif');return true" href="/NIDAHome.html"><img src="/1homeimages/nav_home_off2.gif" alt="Go to the Home page" name="nav_home_off" width="59" height="22" border="0"></a><a onmouseover="changeImages( /*CMP*/'nav_about_off',/*URL*/'/1homeimages/nav_about_on2.gif');return true" onmouseout="changeImages( /*CMP*/'nav_about_off',/*URL*/'/1homeimages/nav_about_off2.gif');return true" href="/about/aboutnida.html"><img src="/1homeimages/nav_about_off2.gif" alt="Go to the About Nida page" name="nav_about_off" width="99" height="22" border="0"></a><a onmouseover="changeImages( /*CMP*/'nav_news_off',/*URL*/'/1homeimages/nav_news_on2.gif');return true" onmouseout="changeImages( /*CMP*/'nav_news_off',/*URL*/'/1homeimages/nav_news_off2.gif');return true" href="/NIDANews.html"><img src="/1homeimages/nav_news_off2.gif" alt="Go to the News page" name="nav_news_off" width="56" height="22" border="0"></a><a onmouseover="changeImages( /*CMP*/'nav_events_off2',/*URL*/'/1homeimages/nav_events_on2.gif');return true" onmouseout="changeImages( /*CMP*/'nav_events_off2',/*URL*/'/1homeimages/nav_events_off2.gif');return true" href="/NIDAevents.html"><img src="/1homeimages/nav_events_off2.gif" alt="Go to the Meetings &amp; Events page" name="nav_events_off2" width="142" height="22" border="0"></a><a onmouseover="changeImages( /*CMP*/'nav_funding_off',/*URL*/'/1homeimages/nav_funding_on2.gif');return true" onmouseout="changeImages( /*CMP*/'nav_funding_off',/*URL*/'/1homeimages/nav_funding_off2.gif');return true" href="/funding/"><img src="/1homeimages/nav_funding_off2.gif" alt="Go to the Funding page" name="nav_funding_off" width="79" height="22" border="0"></a><a onmouseover="changeImages( /*CMP*/'nav_pubs_off',/*URL*/'/1homeimages/nav_pubs_on2.gif');return true" onmouseout="changeImages( /*CMP*/'nav_pubs_off',/*URL*/'/1homeimages/nav_pubs_off2.gif');return true" href="/Pubcat/"><img src="/1homeimages/nav_pubs_off2.gif" alt="Go to the Publications page" name="nav_pubs_off" width="108" height="22" border="0"></a></td>
+<form method="get" action="http://search2.google.cit.nih.gov/search" name="search"></form>
+
+
+<td align="right" valign="middle" height="22" nowrap="">
+<input id="searchbox" type="text" name="q" size="16" maxlength="255" value="">
+<input type="hidden" name="site" value="NIDA">
+<input type="hidden" name="client" value="NIDA_frontend">
+<input type="hidden" name="proxystylesheet" value="NIDA_frontend">
+<input type="hidden" name="output" value="xml_no_dtd">
+<input type="hidden" name="filter" value="0">
+<input type="hidden" name="getfields" value="*">
+<input type="image" src="/1homeimages/nav_search.gif" align="absmiddle" width="60" height="22" border="0" name="btnG" id="btnG" alt="Search">
+</td>
+
+</tr>
+</tbody></table>
+</td>
+</tr>
+</tbody></table>
+</td>
+</tr>
+</tbody></table>
+<table width="788" border="0" cellspacing="0" cellpadding="0">
+<tbody><tr height="36">
+<td align="right" valign="top" bgcolor="#e7e1d0" width="530" height="36"><a onmouseover="changeImages( /*CMP*/'b1',/*URL*/'/1homeimages/newnav/physicians_on.gif');return true" onmouseout="changeImages( /*CMP*/'b1',/*URL*/'/1homeimages/newnav/physicians_off.gif');return true" href="/nidamed/"><img src="/1homeimages/newnav/physicians_off.gif" alt="Physicians" name="b1" height="36" width="136" border="0"></a><a onmouseover="changeImages( /*CMP*/'b2',/*URL*/'/1homeimages/newnav/researchers_on.gif');return true" onmouseout="changeImages( /*CMP*/'b2',/*URL*/'/1homeimages/newnav/researchers_off.gif');return true" href="/researchers.html"><img src="/1homeimages/newnav/researchers_off.gif" alt="Researchers" name="b2" height="36" width="107" border="0"></a><a onmouseover="changeImages( /*CMP*/'b3',/*URL*/'/1homeimages/newnav/parents_on.gif');return true" onmouseout="changeImages( /*CMP*/'b3',/*URL*/'/1homeimages/newnav/parents_off.gif');return true" href="/parent-teacher.html"><img src="/1homeimages/newnav/parents_off.gif" alt="Parents/Teachers" name="b3" height="36" width="91" border="0"></a><a onmouseover="changeImages( /*CMP*/'b4',/*URL*/'/1homeimages/newnav/students_on.gif');return true" onmouseout="changeImages( /*CMP*/'b4',/*URL*/'/1homeimages/newnav/students_off.gif');return true" href="/students.html"><img src="/1homeimages/newnav/students_off.gif" alt="Students/Young Adults" name="b4" height="36" width="114" border="0"></a><a onmouseover="changeImages( /*CMP*/'b5',/*URL*/'/1homeimages/newnav/espanol_on.gif');return true" onmouseout="changeImages( /*CMP*/'b5',/*URL*/'/1homeimages/newnav/espanol_off.gif');return true" href="/nidaespanol.html"><img src="/1homeimages/newnav/espanol_off.gif" alt="En Español" name="b5" height="36" width="82" border="0"></a></td>
+<td align="right" valign="middle" bgcolor="#e7e1d0" height="36"><font color="#e7e1d0">
+<a href="#" onclick="return dropdownmenu(this, event, menu2, '235px')" onmouseout="delayhidemenu()"><img src="/1homeimages/newnav/drugs_on.gif" alt="Drugs of Abuse &amp; Related Topics" name="b6" height="36" width="238" border="0"></a>
+</font>
+</td>
+</tr>
+</tbody></table>
+<table width="788" border="0" cellspacing="0" cellpadding="1" bgcolor="#C4B595">
+<tbody><tr>
+<td>
+<table width="100%" border="0" cellspacing="0" cellpadding="5" bgcolor="white">
+<tbody><tr>
+<td><a name="skipnav"></a>
+
+
 
 <!--End Bottom Header-->
 
@@ -560,7 +716,7 @@ The NIDA site is running a customer satisfaction survey that employs persistent 
 			</td>
 			</tr>
 		</tbody></table>
-		
+		</td></tr>
 	
 	<!--End Guts-->
 	<!--Start Footer-->	
@@ -568,8 +724,8 @@ The NIDA site is running a customer satisfaction survey that employs persistent 
 <!-- =============================================================================================== -->
 <!-- ====================================   BEGIN FOOTER  ========================================== -->
 <!-- =============================================================================================== -->
-
-	
+<tr>
+	<td>
 	
 
 
@@ -582,6 +738,9 @@ The NIDA site is running a customer satisfaction survey that employs persistent 
 	
 	
 		
+<br>
+
+
 <br><br>
 
 <hr noshade="" size="1" color="#C4B595" width="100%">
@@ -597,15 +756,15 @@ The NIDA site is running a customer satisfaction survey that employs persistent 
 </tr>
 </tbody></table>
 
-
-
-
-
-
-<br>
+</td>
+</tr>
+</tbody></table>
+</td>
+</tr>
+</tbody></table><br>
 
 
 
 
 <!-- #EndTemplate -->
-</body></html>
+</center></body></html>
