amadirectlink.com (archived on 2009-06-08)
{
  "alexa_rank": 83015,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7376,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.65,
  "homepage_snapshot_redirected_domain": "amadirectlink.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090403064216id_/http://www.amadirectlink.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090403064216id_/http%3A//amadirectlink.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "amadirectlink.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090608185559id_/http%3A//www.amadirectlink.com/whatis/privacy.asp",
  "policy_title": "AMA Privacy Policy",
  "policy_url": "amadirectlink.com/whatis/privacy.asp",
  "sha1": "dcc95ac1860af1c4be4a6d348fdc2f04bbe966db",
  "simhash": 5043169441758931209,
  "simhash_updated": false,
  "site_hostname": "amadirectlink.com",
  "site_url": "http://amadirectlink.com",
  "smog": 15.34,
  "strict_updated": false,
  "timestamp": "20090608185559",
  "word_count": 1231,
  "year": 2009
}

--- a/a/am/ama/amadirectlink.com.html
+++ b/a/am/ama/amadirectlink.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the amadirectlink.com privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219150026id_/http%3A//www.amadirectlink.com/whatis/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the amadirectlink.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608185559id_/http%3A//www.amadirectlink.com/whatis/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
@@ -32,7 +32,7 @@ window.open(url=printme, "printwindow")
 <script type="text/JavaScript">
 <!-- hide script
 function redirectMAIL(){
-URL='http://www.amadirectlink.com/links/emaillinkform.asp?eaddr=http://www.amadirectlink.com/index.asp?ad=/whatis/privacy.asp';
+URL='http://www.amadirectlink.com/links/emaillinkform.asp?eaddr=http://www.amadirectlink.com/index.asp?ad=/whatis/privacy.asp?';
 window.open(URL,"Email_Link","toolbar=no,width=520,height=500,status=no,scrollbars,menubar=no,resizable, left=250, top=100");
 }
 // end hiding script -->
@@ -74,25 +74,54 @@ window.open(URL,"memrenewal",'toolbar=no,width=650,height=450,status=yes,scrollb
 
 <div id="skyscraper">
 	<p>
-	<a href="http://www.nationwide.com/nw/auto/motorcycle/index.htm?WT.mc_id=AMA001"><img src="http://www.amadirectlink.com/ads/skyscraper/nationwide.gif" alt="Motorcycle insurance from www.nationwide.com"></a>
-</p>
+	<a href="http://www.ridewithmcgraw.com/int4">
+	    <img src="http://www.amadirectlink.com/ads/skyscraper/McGraw2.gif" alt="Saving riders money for 30 years.">
+    </a>
+
+
+<!--
+case 1 %>
+	<a href="http://www.motorcycle.com">
+	    <img src="http://www.amadirectlink.com/ads/skyscraper/motorcycle.jpg" 
+		    alt="Motorcycle news/info at www.motorcycle.com" />
+	</a>
+--></p>
 </div>
 
 <div id="leftcolumn">
 	<div id="nav">
 
-<ul><li><a href="http://www.amadirectlink.com/index.asp" class="home">Home</a></li></ul>
+        <ul><li><a href="http://www.amadirectlink.com/index.asp" class="home">Home</a></li></ul>
 
-<ul><li class="navmain">The Life</li><li><a href="http://www.amadirectlink.com/news.asp" title="News and event information">News &amp; Events</a></li><li><a href="http://www.amadirectlink.com/rights/index.asp" title="Protecting motorcyclists' rights">Rights</a><div class="submenu">
-	<ul><li><a href="http://www.amadirectlink.com/legisltn/rapidresponse.asp">Issues &amp; Legislation</a></li><li><a href="http://www.amadirectlink.com/legisltn/laws.asp">State Laws</a></li><li><a href="http://www.amadirectlink.com/legisltn/resources.asp">Resources</a></li></ul></div></li>
+<ul>
+    <li class="navmain">The Life</li>
+    <li><a href="http://www.amadirectlink.com/news.asp" title="News and event information">News &amp; Events</a></li>
+    <li><a href="http://www.amadirectlink.com/rights/index.asp" title="Protecting motorcyclists' rights">Rights</a>
+	        <div class="submenu">
+	            <ul>
+	                <li><a href="http://www.amadirectlink.com/legisltn/rapidresponse.asp">Issues &amp; Legislation</a></li>
+	                <li><a href="http://www.amadirectlink.com/legisltn/laws.asp">State Laws</a></li>
+	                <li><a href="http://www.amadirectlink.com/legisltn/resources.asp">Resources</a></li>
+	                <li><a href="http://www.AmericanMotorcyclist.com/legisltn/getInvolved/">Get Involved</a></li>
+	            </ul>
+	        </div>
+	</li>
 	<li><a href="http://www.amadirectlink.com/riding/index.asp" title="We love to ride">Riding</a>
 		<div class="submenu">
-		<ul><li><a href="http://www.amadirectlink.com/roadride/road.asp">Road</a></li>
-				<li><a href="http://www.amadirectlink.com/roadride/offroad.asp">Off-Road</a></li><li><a href="http://www.amadirectlink.com/riding/reviews/">Bike Reviews</a></li><li><a href="http://www.amadirectlink.com/roadride/Riderresc/index.asp">Rider Resources</a></li><li><a href="http://www.amadirectlink.com/roadride/NewRider/index.asp">New Rider?</a></li><li><a href="http://www.amadirectlink.com/travel/index.asp">AMA Tours</a></li></ul></div></li>
-	<li><a href="http://www.amadirectlink.com/racing/index.asp" title="The world of motorcycle racing">Racing</a>
+		<ul>
+			<li><a href="http://www.amadirectlink.com/roadride/road.asp">Road</a></li>
+			<li><a href="http://www.amadirectlink.com/roadride/offroad.asp">Off-Road</a></li>
+			<li><a href="http://www.amadirectlink.com/riding/reviews/">Bike Reviews</a></li>
+			<li><a href="http://www.amadirectlink.com/roadride/Riderresc/index.asp">Rider Resources</a></li>
+			<li><a href="http://www.amadirectlink.com/roadride/NewRider/index.asp">New Rider?</a></li>
+			<li><a href="http://www.amadirectlink.com/travel/index.asp">AMA Tours</a></li> 
+		</ul>
+		</div>
+		</li>
+			<li><a href="http://www.amadirectlink.com/amrace/amasports.asp" title="The world of motorcycle racing">Racing</a>
 		<div class="submenu">
 			<ul>
-				<li><a href="http://www.amadirectlink.com/amrace/amasports.asp">AMA Sports</a></li><li><a href="http://www.amadirectlink.com/rulebooks/">Rulebooks</a></li><li><a href="http://www.amadirectlink.com/amrace/torace.asp">Want to Race?</a></li>
+				<li><a href="http://www.amadirectlink.com/amrace/amasports.asp">AMA Racing</a></li><li><a href="http://www.amadirectlink.com/rulebooks/">Rulebooks</a></li><li><a href="http://www.amadirectlink.com/amrace/torace.asp">Want to Race?</a></li>
 			</ul>
 		</div>
 	</li>
@@ -105,6 +134,7 @@ window.open(URL,"memrenewal",'toolbar=no,width=650,height=450,status=yes,scrollb
 	<li><a href="http://www.amadirectlink.com/clubs/index.asp">Clubs &amp; Promoters</a></li>
 	<li><a href="http://www.amadirectlink.com/magazine/index.asp" title="American Motorcyclist magazine">The Magazine</a></li>
 	<li><a href="http://www.motorcyclemuseum.org" title="The Motorcycle Hall of Fame Museum">Museum</a></li>
+	<li><a href="http://www.atvaonline.com" title="The All-Terrain Vehicle Association">ATVA</a></li>
 	<li><a href="http://www.amadirectlink.com/classifieds/ad_home.asp" title="AMA members can post classified ads for free">Classifieds</a></li>
 	<li><a href="http://home.ama-cycle.org/giftshop/" title="Get AMA gear">Gear</a></li>
 </ul>
@@ -261,7 +291,7 @@ unchanged, only to the server you intended to send it to.</p>
 </div>
 </div>
 	<div id="footer">
-		<p>© 2008 American Motorcyclist Association | <a href="http://www.amadirectlink.com/whatis/privacy.asp">Privacy Policy</a></p>
+		<p>© 2009 American Motorcyclist Association | <a href="http://www.amadirectlink.com/whatis/privacy.asp">Privacy Policy</a></p>
 	</div>
 </div>
 <script type="text/javascript">
