--- a/p/ps/pse/pseg.com.html
+++ b/p/ps/pse/pseg.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pseg.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218014722id_/http%3A//www.pseg.com/privacy/index.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pseg.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608185957id_/http%3A//www.pseg.com/privacy/index.jsp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -19,7 +19,7 @@
 <link rel="stylesheet" type="text/css" media="print" href="/includes/style_sheets/print.css">
 
 
-<script src="/includes/javascript/SDC_Webtrends/dcs_PSEG1.js" type="text/javascript"></script>
+<script src="/includes/javascript/SDC_Webtrends/dcs_PSEG1.js" type="text/javascript"></script><script type="text/javascript" src="https://webtrendssdc.pseg.com/dcs80owjsj8upb630t31f7nqo_3i5h/wtid.js"></script>
 <noscript>
 <IMG ALT="" BORDER="0" NAME="DCSIMG" WIDTH="1" HEIGHT="1" SRC="http://webtrendssdc.pseg.com/dcs80owjsj8upb630t31f7nqo_3i5h/njs.gif?dcsuri=/nojavascript&amp;WT.js=No">
 </noscript>
@@ -157,12 +157,14 @@
 <!-- HEADER BANNER -->
 
 
+
 <table id="HeaderBanner" width="760" border="0" cellpadding="0" cellspacing="0" bgcolor="000000" style="border-width:1px; border-style:solid; border-color:#000000; border-bottom:none;">
 <tbody><tr align="center" valign="middle">
 	<td width="246"><a href="http://www.pseg.com/index.jsp"><img src="http://www.pseg.com/images/logos/pseg_logo.gif" alt="" border="0"></a></td>
 	<td align="right" width="514"><img src="http://www.pseg.com/images/banners/reliable/reliable3b.jpg" alt="" border="0"></td>	
 </tr>
 </tbody></table>
+
 
 
 <!-- END OF HEADER BANNER -->
@@ -365,7 +367,7 @@
 	<td valign="top"><img src="http://www.pseg.com/images/spacer.gif" alt="" width="1" height="9" border="0"></td>
 </tr>
 <tr>
-	<td class="grayfooter">© 2008 Public Service Enterprise Group Incorporated. All rights reserved. <a class="orangeMoreLink" href="http://www.pseg.com/disclaimer/index.jsp">Disclaimer</a> / <a class="orangeMoreLink" href="http://www.pseg.com/privacy/index.jsp">Privacy Policy</a>.</td>
+	<td class="grayfooter">© 2009 Public Service Enterprise Group Incorporated. All rights reserved. <a class="orangeMoreLink" href="/disclaimer/index.jsp">Disclaimer</a> / <a class="orangeMoreLink" href="/privacy/index.jsp">Privacy Policy</a>.</td>
 </tr>
 </tbody></table>
 
