onmylist.com (archived on 2009-06-08)
{
  "alexa_rank": 60243,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 3423,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.04,
  "homepage_snapshot_redirected_domain": "onmylist.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090318140003id_/http://www.onmylist.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090318140003id_/http%3A//onmylist.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "onmylist.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090608212714id_/http%3A//www.onmylist.com/info/privacy_policy",
  "policy_title": "info | privacy policy - OnMyList",
  "policy_url": "onmylist.com/info/privacy_policy",
  "sha1": "5c2166f7bfd2e421efd6138af01ce080876055b0",
  "simhash": 16403716617089683880,
  "simhash_updated": false,
  "site_hostname": "onmylist.com",
  "site_url": "http://onmylist.com",
  "smog": 13.92,
  "strict_updated": false,
  "timestamp": "20090608212714",
  "word_count": 574,
  "year": 2009
}

--- a/o/on/onm/onmylist.com.html
+++ b/o/on/onm/onmylist.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the onmylist.com privacy policy that was archived on 2008-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081220171048id_/http%3A//www.onmylist.com/info/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the onmylist.com privacy policy that was archived on 2009-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090608212714id_/http%3A//www.onmylist.com/info/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 
@@ -30,6 +30,9 @@
 <script type="text/javascript" src="http://www.plaxo.com/css/m/js/abc_launcher.js"></script>
 
 
+
+
+<script type="text/javascript" src="http://triggit.com/j?u=onmylist"></script>
 
 
 
@@ -321,10 +324,10 @@ or <strong><a href="/member/register">Sign Up</a></strong>
 
 
 <div id="blog">
-	<p><a href="http://feeds.feedburner.com/~r/OnMyListBlog/~3/236678411/upping-participation">Upping participation</a></p>
-    <span class="info">Posted by Noah 306 days ago</span>
+	<p><a href="http://feedproxy.google.com/~r/OnMyListBlog/~3/efSOt9d-Wc8/upping-participation">Upping participation</a></p>
+    <span class="info">Posted by Noah 476 days ago</span>
 	<p>I’ve been spending lots of time trying to think of ways to…</p>
-    <a href="http://feeds.feedburner.com/~r/OnMyListBlog/~3/236678411/upping-participation" class="more">Read More</a>
+    <a href="http://feedproxy.google.com/~r/OnMyListBlog/~3/efSOt9d-Wc8/upping-participation" class="more">Read More</a>
 </div>
 
 
