--- a/e/en/eng/englishharmony.com.html
+++ b/e/en/eng/englishharmony.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the englishharmony.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217110353id_/http%3A//englishharmony.com/Privacy_Statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the englishharmony.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609004029id_/http%3A//englishharmony.com/Privacy_Statement.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,17 +9,22 @@
 <link type="text/css" rel="stylesheet" href="xsp_styles.css">
 <meta name="Author" content="Robby Kukurs">
 <meta name="Copyright" content="2007 EnglishHarmony.com">
-
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-3109117-1");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 
 </head>
 <body>
 
 <table class="XSP_OUTLINE" align="center" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
-<td colspan="3" class="XSP_HEADER_PANEL"><table title="" style="WIDTH: 478px; HEIGHT: 165px" height="165" cellspacing="0" cellpadding="0" width="478" align="right" border="0">
-<tbody>
-<tr>
-<td class="NAVBAR_LEFT" valign="bottom" height="133">&nbsp;<font size="1"><a href="index.html"><font face="Verdana, Sans-Serif" color="#ffffff">Home</font></a></font><font face="Verdana, Sans-Serif" color="#ffffff" size="1">&nbsp; |&nbsp; </font><a href="English_Harmony_FAQ.html"><font face="Verdana, Sans-Serif" color="#ffffff" size="1">FAQ</font></a><font face="Verdana, Sans-Serif" color="#ffffff" size="1">&nbsp; |&nbsp; </font><a class="NAVBAR_LEFT" href="English_Harmony_About.html"><font face="Verdana, Sans-Serif" color="#ffffff" size="1">About</font></a><font face="Verdana, Sans-Serif"><font color="#ffffff">&nbsp;<font size="1">&nbsp;|&nbsp; </font><font size="1"><a href="English_Harmony_Contact_Me.html"><font face="Verdana, Sans-Serif" color="#ffffff">Contact Robby</font></a></font><font size="1">&nbsp; |&nbsp;&nbsp;<a title="" href="http://englishharmony.com/blog/" target="_new"><font face="Verdana, Sans-Serif" color="#ffffff">Harmony Blog</font></a> | </font><font size="1"><a href="English_Harmony_Affiliates.html"><font face="Verdana, Sans-Serif" color="#ffffff">Become Partner</font></a></font></font></font></td></tr></tbody></table></td>
+<td colspan="3" class="XSP_HEADER_PANEL"><img border="0" src="english_harmony_header.jpg" alt="Improve Spoken English - English Harmony"></td>
 </tr>
 <tr>
 <td class="XSP_LEFT_PANEL_SPC" id="XSP_LEFT_PANEL_SPC" height="1"><div class="XSP_LEFT_PANEL">
@@ -148,15 +153,13 @@ not use the personal information you have submitted to me under this Privacy Pol
 Policy, without your prior consent.</span></p>
 
 
-</td></tr><tr><td class="XSP_MAIN_PANEL_FOOTER"><p align="center"><a href="./" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">Home</a>&nbsp;&nbsp;
+</td></tr><tr><td class="XSP_MAIN_PANEL_FOOTER"><p align="center"><strong><font color="black"></font></strong><a href="./" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">Home</a>&nbsp;&nbsp;
 <a href="English_Harmony_About.html" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">About&nbsp;Robby</a>&nbsp;&nbsp;
 <a href="English_Harmony_Contact_Me.html" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">Contact&nbsp;Me</a>&nbsp;&nbsp;
-<a href="English_Harmony_Affiliates.html" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">Affiliates</a>&nbsp;&nbsp;
-<a href="English_Harmony_FAQ.html" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">FAQ</a>&nbsp;&nbsp;
 <a href="Improve_English_Fluency.html" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">Improve&nbsp;English&nbsp;Fluency</a>&nbsp;&nbsp;
 <a href="Privacy_Statement.html" style="FONT-SIZE: 10pt; COLOR: Black; FONT-FAMILY: Arial, Sans-Serif;">Privacy&nbsp;Statement</a>&nbsp;&nbsp;
 
-</p>
+&nbsp; <a title="" href="http://englishharmony.com/blog/" target="_blank"><font color="black">Blog</font></a></p>
 </td></tr></tbody></table></td>
 <td class="XSP_RIGHT_PANEL_SPC" id="XSP_RIGHT_PANEL_SPC" height="1"><div class="XSP_RIGHT_PANEL">
 
