--- a/p/pl/pla/playnow3dgames.com.html
+++ b/p/pl/pla/playnow3dgames.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the playnow3dgames.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216013015id_/http%3A//playnow3dgames.com/terms.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the playnow3dgames.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609035004id_/http%3A//www.playnow3dgames.com/terms.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	
@@ -68,7 +68,15 @@ In the course of serving advertisements to this site, our third-party advertiser
 </tbody></table></div>
 	
 	<!-- STATS -->
-	<div id="terms_stats" align="center"><table width="200" border="0" cellpadding="0" cellspacing="0">
+	<div id="terms_stats" align="center"><script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-7101685-2");
+pageTracker._trackPageview();
+} catch(err) {}</script><table width="200" border="0" cellpadding="0" cellspacing="0">
 	
 	<!-- ADDFREESTATS -->
 	<tbody><tr valign="bottom">
