lilly.com (archived on 2009-06-09)
{
  "alexa_rank": 86566,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 11871,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.99,
  "homepage_snapshot_redirected_domain": "lilly.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090401211202id_/http://www.lilly.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090401211202id_/http%3A//lilly.com",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "lilly.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090609050742id_/http%3A//www.lilly.com/privacy",
  "policy_title": "Eli Lilly and Company \u00bb Privacy Policy",
  "policy_url": "lilly.com/privacy",
  "sha1": "6e35da427a8a5a21c98540f033e6448064909c63",
  "simhash": 357361109671683414,
  "simhash_updated": false,
  "site_hostname": "lilly.com",
  "site_url": "http://lilly.com",
  "smog": 15.69,
  "strict_updated": false,
  "timestamp": "20090609050742",
  "word_count": 1872,
  "year": 2009
}

--- a/l/li/lil/lilly.com.html
+++ b/l/li/lil/lilly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lilly.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216162624id_/http%3A//lilly.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lilly.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609050742id_/http%3A//www.lilly.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Lilly_FullWidthPage.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -92,7 +92,7 @@
 
 <h2>U.S. - EU Safe Harbor Privacy Statement</h2>
 
-<p>For personal information of employees, consumers, healthcare professionals, medical research subjects and investigators, customers, investors, and government officials that Lilly receives from the European Economic Area, including Switzerland, Lilly has committed to handling such personal information in accordance with the Safe Harbor Principles. Lilly's Safe Harbor certification can be found at http://web.ita.doc.gov/safeharbor/shlist.nsf/webPages/safe+harbor+list. For more information about the Safe Harbor Principles, please visit the U.S. Department of Commerce's Website at http://www.export.gov/safeharbor/sh_overview.html.</p>
+<p>For personal information of employees, consumers, healthcare professionals, medical research subjects and investigators, customers, investors, and government officials that Lilly receives from the European Economic Area, including Switzerland, Lilly has committed to handling such personal information in accordance with the Safe Harbor Principles. Lilly's Safe Harbor certification can be found at http://web.ita.doc.gov/safeharbor/shlist.nsf/webPages/safe+harbor+list. For more information about the Safe Harbor Principles, please visit the U.S. Department of Commerce's Website at <a href="http://www.export.gov/safeharbor/">http://www.export.gov/safeharbor/</a>.</p>
 
 <h2>Social Security Number Protection Policy</h2>
 
@@ -137,7 +137,6 @@
     <li>For legal compliance, such as adverse event reporting or to enforce our rights; and</li> 
 
     <li>For other everyday business purposes, such as website management, research and product development.</li>
-
 </ul>
 
 
@@ -235,27 +234,22 @@ Indianapolis, IN 46206-6245</p>
 P.O. Box 6245<br>
 
 Indianapolis, IN 46206-6245<br>
-
-
-
 </p><p>Or calling Lilly toll-free at 1-800-LillyRx (1-800-545-5979).</p>
 
 
 
 <p class="em">Last Updated: July 25, 2008</p><p>
 </p><p class="backtotop clearboth"><a href="#wrapper">Back to top</a></p>
-
-
-
-
-	<!-- InstanceEndEditable -->
-    </div><!-- end .container -->
+	<!-- InstanceEndEditable -->    </div>
+    <!-- end .container -->
 </div> <!-- end #content -->
 </div> <!-- end #wrapper --><!-- #BeginLibraryItem "/Library/footer.lbi" --><div id="footer">
 	<div class="container">
-        <p class="copyright">Copyright © 2008 Eli Lilly and Company. All rights reserved.</p>
+        <p class="copyright">Copyright © <script type="text/javascript">
+		var d = new Date();
+		document.write(d.getFullYear());</script>2020 Eli Lilly and Company. All rights reserved.</p>
 
-        <p class="nav"><a href="/careers/">Careers</a> |
+        <p class="nav"><a href="/careers/" target="_blank">Careers</a> |
         <a href="/terms/">Terms of Use</a> |
         <a href="/privacy/">Privacy</a> |
         <a href="http://supplierportal.lilly.com/" rel="external" class="externalnoIcon noToolTip external" target="_blank">For Suppliers</a> |
