smooch.com (archived on 2009-06-09)
{
  "alexa_rank": 16298,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 7291,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "standard",
  "flesch_kincaid": 8.28,
  "homepage_snapshot_redirected_domain": "smooch.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090402033839id_/http://www.smooch.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090402033839id_/http%3A//smooch.com",
  "interval": "2009_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "smooch.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090609061148id_/http%3A//www.smooch.com/free-online-dating/Privacy-Statement.asp",
  "policy_title": "Completely Free Dating at Smooch.com\u2122",
  "policy_url": "smooch.com/free-online-dating/Privacy-Statement.asp",
  "sha1": "2a14de99fd96f001f33f2379902da17e9857e049",
  "simhash": 6018744533129455702,
  "simhash_updated": false,
  "site_hostname": "smooch.com",
  "site_url": "http://smooch.com",
  "smog": 10.5,
  "strict_updated": false,
  "timestamp": "20090609061148",
  "word_count": 1263,
  "year": 2009
}

--- a/s/sm/smo/smooch.com.html
+++ b/s/sm/smo/smooch.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smooch.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216015702id_/http%3A//www.smooch.com/free-online-dating/Privacy-Statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smooch.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609061148id_/http%3A//www.smooch.com/free-online-dating/Privacy-Statement.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Completely Free Dating at Smooch.com™</title>
@@ -26,7 +26,7 @@
 		<div id="Login">
 		 
 		    	<div id="loginform">	
-			    	<form action="asp/entryProc.asp" method="Post" name="entry" id="entry" onsubmit="memberslogin();return false;">
+			    	<form action="" method="Post" name="entry" id="entry" onsubmit="memberslogin();return false;">
 		      			Username<br><input type="text" name="username" id="username"><br><br style="line-height:2px;">
 		      			Password<br><input type="password" id="password" name="password" onkeypress="return onEnter(event,this.form);">
 		      			<input type="hidden" name="ENTER" value="ENTER">
@@ -123,7 +123,7 @@
 		<a title="Free Dating in USA" href="Free-USA-Dating.asp">Free USA Dating</a>&nbsp;&nbsp;|&nbsp;
 		<a title="Free Dating In Australia" href="Free-Australian-Dating.asp">Free Australian Dating</a>&nbsp;&nbsp;
 		</div>
-		<span id="copyR">© Smooch.com 2008</span>
+		<span id="copyR">© Smooch.com 2009</span>
 	</div>
 	<div id="PageContentF">
 		<div id="PageContent">
@@ -152,6 +152,8 @@
 		</div>
 	</div>
 </div>
+<div id="primaryDrive"><a href="http://www.primarydrive.com" title="Powered by PrimaryDrive Ltd." target="_blank">Powered by PrimaryDrive Ltd.</a></div>
+
 <!--this is where pagebottom.asp ends-->
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
