--- a/s/st/sty/stylusstudio.com.html
+++ b/s/st/sty/stylusstudio.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the stylusstudio.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216021536id_/http%3A//www.stylusstudio.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stylusstudio.com privacy policy that was archived on 2009-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090609062732id_/http%3A//www.stylusstudio.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <link href="/style/rebrand.css" rel="stylesheet" type="text/css"> 
     <link href="/style/default.css" rel="stylesheet" type="text/css"> 
     <link href="/style/hidefromprint.css" rel="stylesheet" type="text/css" media="print"> 
     <link rel="SHORTCUT ICON" href="/favicon.ico">
-    <meta name="COPYRIGHT" content="Copyright (c) 2004-2008 Progress Software Corporation">
+    <meta name="COPYRIGHT" content="Copyright (c) 2004-2009 Progress Software Corporation">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title id="ctl00_PageTitle">Privacy Policy</title>
     <meta id="ctl00_PageDescription" name="DESCRIPTION" content="Stylus Studio respects your right to privacy, and our privacy policy explains how we handle any information you provide us.
@@ -226,7 +226,7 @@ future communications about services and product information can <a href="/xml_c
     <span id="nextSibling" style="margin-left:20px;"><a href="/eula.html" id="nextSiblingLink" class="list" title="Stylus Studio End User Product License Agreement"><img alt="next page" align="middle" src="/images/nav_1r.gif" width="13" height="13">Next: <b>"Stylus Studio EULA"</b></a></span>
 </p>
 <div id="ctl00_MostWantedArea" class="mostWantedCenter">
-                                <div id="ctl00_RandomLinks1_MostWanted" class="mostWantedBox"><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/videos/tour1/tour1.html">Learn Stylus Studio in 6 Minutes</a></h3><p>Learn Stylus Studio in 6 Minutes is the world's fastest introduction to XML development using Stylus Studio. In just six minutes, learn how to leverage Stylus Studio's powerful XML tools and utilities to simplify XML development.</p></div><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/edi/EDI_to_EDI.html">Map between EDIFACT and X12</a></h3><p>Anything can be mapped to anything: EDIFACT to X12 or vice-versa, either to XML, and any of those to flat files or other formats. Both the XSLT and XQuery mappers can help bridge complex formats with ease.</p></div><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/customers/stories/katrina_relief.html">Stylus Studio Lends a Helping Hand to the New Orleans Reconstruction Efforts</a></h3><p>Read how Stylus Studio is helping with the on-going hurricane Katrina reconstruction efforts in New Orleans.</p></div><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/edi/EDIFACT_example.html">EDIFACT Sample Converted to XML</a></h3><p>A sample EDIFACT document before and after conversion to XML, showing markup and full automatically-generated internal documentation.</p></div></div>
+                                <div id="ctl00_RandomLinks1_MostWanted" class="mostWantedBox"><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/customers/Air_Defense.html">Airlines, Aerospace and Defense</a></h3><p>Want to know what airlines, aerospace and defense companies are soaring high with Stylus Studio 2006? Well now you can! Come check out these leading companies and soar with Stylus Studio 2006 yourself.</p></div><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/xquery_integration.html">XQuery Integration</a></h3><p>Learn how new XQuery technologies can simplify legacy data integration by leveraging industry standards, proven open-source XML processing components, and Stylus Studio's integrated XQuery &amp; XML tools.</p></div><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/xquery/xqdoc.html">XQuery Documentation Generator</a></h3><p>Stylus Studio provides integrated support for xqDoc so you can generate XQuery documentation directly from the XQuery editor.</p></div><div class="mostWantedEntry"><h3><a href="http://www.stylusstudio.com/xml_code_folding.html">XML Code Folding</a></h3><p>Stylus Studio's XML Editor features XML code folding, a powerful and intuitive way to maximize limited screen real-estate and help make sense of large XML files.</p></div></div>
 
                                 <h4><a href="/advertise.html" style="color:#ffe">Stylus Most Wanted</a></h4></div>
                         </div>
@@ -282,7 +282,7 @@ future communications about services and product information can <a href="/xml_c
     </div>    
     <br>
     <div class="print_footer" style="text-align: center">
-        Copyright © 2005-2008
+        Copyright © 2005-2009
         Progress Software Corporation. All Rights Reserved <span class="footerPhone"> </span>
     </div>
     
